fixed caption positioning on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,20 @@
+/* TODO: fix mobile position for caption */
+
 #caption{
-    position: fixed;
+    position: absolute;
     bottom: 10px;
     width: 100%;
     text-align: center;
     color: white;
     background: rgba(0,0,0, 0.75);
-    padding: 10px;
 }
 
 @media (max-width: 768px) {
     #caption {
-        font-size: 15px;
-        left: 5px;
+        justify-items: center;
+        font-size: 17px;
+        left: 2px;
+        padding-right: 5px;
     }
 }
 
